--- a/Source/A2B/A2B_Teleport.csproj
+++ b/Source/A2B/A2B_Teleport.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -35,20 +35,26 @@
     <Reference Include="System.Core" />
     <Reference Include="Assembly-CSharp">
       <HintPath>Source-DLLs\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine">
       <HintPath>Source-DLLs\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="A2B">
       <HintPath>Source-DLLs\A2B.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Buildings\Building_Teleporter.cs" />
+    <Compile Include="Components\BeltReceiverComponent.cs" />
+    <Compile Include="Components\BeltSenderComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\BeltTeleporterComponent.cs" />
     <Compile Include="Utilities\A2BResearchTeleport.cs" />
     <Compile Include="Utilities\A2BTeleportData.cs" />
+    <Compile Include="Utilities\A2BTeleporterManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
