--- a/Source/A2B/A2B_Teleport.csproj
+++ b/Source/A2B/A2B_Teleport.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
-    <ReleaseVersion>0.11.0.0</ReleaseVersion>
+    <ReleaseVersion>0.11.1.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -52,9 +52,9 @@
     <Compile Include="Components\BeltSenderComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\BeltTeleporterComponent.cs" />
-    <Compile Include="Utilities\A2BResearchTeleport.cs" />
     <Compile Include="Utilities\A2BTeleportData.cs" />
     <Compile Include="Utilities\A2BTeleporterManager.cs" />
+    <Compile Include="Utilities\A2BTeleportResearch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
